added modals for viewing

--- a/index.html
+++ b/index.html
@@ -1,45 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design for Bootstrap</title>
-  <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Start your project here-->  
-  <div style="height: 100vh">
-    <div class="flex-center flex-column">
-      <h1 class="text-hide animated fadeIn mb-4" style="background-image: url('https://mdbootstrap.com/img/logo/mdb-transparent-250px.png'); width: 250px; height: 90px;">MDBootstrap</h1>
-      <h5 class="animated fadeIn mb-3">Thank you for using our product. We're glad you're with us.</h5>
-      <p class="animated fadeIn text-muted">MDB Team</p>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- additional stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <!-- start -->
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Martial Arts Gym Application</h1>
+
+      <hr class="mt-2 mb-5">
+
+      <div class="row text-center text-lg-left">
+
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
+              <p class="text-center" id="txt">Admin Main View</p></a>
+        </div>
+
     </div>
-  </div>
-  <!-- End your project here-->
+    <!-- /.container -->
 
-  <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
 
-</body>
+    <!-- modal -->
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">              
+          <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <img src="" class="imagepreview" style="width: 100%;" >
+            <p class="text-center" id="caption"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
