--- a/magits.html
+++ b/magits.html
@@ -18,16 +18,16 @@
     <!-- Page Content -->
     <div class="container">
 
-      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Projects</h1>
+      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Martial Arts Gym Application</h1>
 
       <hr class="mt-2 mb-5">
 
       <div class="row text-center text-lg-left">
 
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="/magits.html" class="d-block mb-4 h-100 test">
+        <div class="col-lg-3 col-md-4 col-6 pop">
+          <a href="#" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Martial Arts Gym Information and Tracking System</p></a>
+              <p class="text-center" id="txt">Admin Main View</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
@@ -66,6 +66,20 @@
         </div>
     </div>
     <!-- /.container -->
+
+
+    <!-- modal -->
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">              
+          <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <img src="" class="imagepreview" style="width: 100%;" >
+            <p class="text-center" id="caption"></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
