--- a/index.html
+++ b/index.html
@@ -25,44 +25,24 @@
       <div class="row text-center text-lg-left">
 
         <div class="col-lg-3 col-md-4 col-6">
-          <a href="/magits.html" class="d-block mb-4 h-100 test">
+          <a href="./magits.html" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
               <p class="text-center" id="txt">Martial Arts Gym Information and Tracking System</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
+          <a href="./coronavirusagent.html" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+              <p class="text-center" id="txt">Coronavirus Digital Agent Using Neural Networks</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
+          <a href="./gpstracker.html" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+              <p class="text-center" id="txt">Android GPS Tracker</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
+          <a href="./collegeanalysis.html" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+              <p class="text-center" id="txt">College Applications Regression and Classification Analysis</p></a>
         </div>
     </div>
     <!-- /.container -->
