--- a/gpstracker.html
+++ b/gpstracker.html
@@ -26,43 +26,33 @@
 
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/1.jpg" alt="testing">
+              <p class="text-center" id="txt">Main Menu</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/2.jpg" alt="testing">
+              <p class="text-center" id="txt">About Us</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/3.jpg" alt="testing">
+              <p class="text-center" id="txt">Currently Tracking Movement</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/4.jpg" alt="testing">
+              <p class="text-center" id="txt">List of All Saved Routes</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/5.jpg" alt="testing">
+              <p class="text-center" id="txt">Edit a Route</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/6.jpg" alt="testing">
+              <p class="text-center" id="txt">Drawing the Route to a Google Maps API</p></a>
         </div>
     </div>
     <!-- /.container -->
