fixed image design and added snapshots

--- a/collegeanalysis.html
+++ b/collegeanalysis.html
@@ -11,7 +11,7 @@
     <!-- additional stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Project Snapshots</title>
+    <title>College Applications Regression and Classification Analysis</title>
   </head>
   <body>
 
@@ -24,45 +24,37 @@
 
       <div class="row text-center text-lg-left">
 
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Login Page</h3>
+          <img class="img-fluid" src="./img/magits/login.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Registration Page</h3>
+          <img class="img-fluid" src="./img/magits/registration.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Admin: Course Manager</h3>
+          <img class="img-fluid" src="./img/magits/admin-main.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Admin: Create Course Page</h3>
+          <img class="img-fluid" src="./img/magits/admin-createcourse.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Instructor: Landing Page</h3>
+          <img class="img-fluid" src="./img/magits/instructor-main.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Instructor: Member Check-in Page (QR Scanner)</h3>
+          <img class="img-fluid" src="./img/magits/instructor-checkin.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Member: Landing Page</h3>
+          <img class="img-fluid" src="./img/magits/member-main.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Member: View Profile Page</h3>
+          <img class="img-fluid" src="./img/magits/member-viewprofile.png" alt="testing"><br><br><br>
         </div>
     </div>
     <!-- /.container -->
@@ -74,7 +66,7 @@
         <div class="modal-content">              
           <div class="modal-body">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <img src="" class="imagepreview" style="width: 100%;" >
+            <img src="" class="imagepreview" style="height: 100%; width: 100%;" >
             <p class="text-center" id="caption"></p>
           </div>
         </div>
