--- a/coronavirusagent.html
+++ b/coronavirusagent.html
@@ -11,58 +11,34 @@
     <!-- additional stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Project Snapshots</title>
+    <title>Coronavirus Digital Agent (Trained Using Neural Network)</title>
   </head>
   <body>
 
     <!-- Page Content -->
     <div class="container">
 
-      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Coronavirus Digital Agent</h1>
+      <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Coronavirus Digital Agent (Trained Using Neural Network)</h1>
 
       <hr class="mt-2 mb-5">
 
       <div class="row text-center text-lg-left">
 
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Updated Numbers on the Left</h3>
+          <img class="img-fluid border border-secondary" src="./img/corona/1.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Asking a Question to the Agent</h3>
+          <img class="img-fluid border border-secondary" src="./img/corona/2.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Get Results</h3>
+          <img class="img-fluid border border-secondary" src="./img/corona/3.png" alt="testing"><br><br><br>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
-          <a href="#" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Admin Main View</p></a>
+        <div class="container">
+          <h3 class="font-weight-light text-center text-lg">Training the Model</h3>
+          <img class="img-fluid border border-secondary" src="./img/corona/4.png" alt="testing"><br><br><br>
         </div>
     </div>
     <!-- /.container -->
@@ -74,7 +50,7 @@
         <div class="modal-content">              
           <div class="modal-body">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <img src="" class="imagepreview" style="width: 100%;" >
+            <img src="" class="imagepreview" style="height: 100%; width: 100%;" >
             <p class="text-center" id="caption"></p>
           </div>
         </div>
