--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 
         <div class="col-lg-3 col-md-4 col-6">
           <a href="./magits.html" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Martial Arts Gym Information and Tracking System</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/magits/login.png" alt="MAGITS">
+              <p class="text-center">Martial Arts Gym Information and Tracking System</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="./coronavirusagent.html" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Coronavirus Digital Agent Using Neural Networks</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/corona/1.png" alt="Digital Agent">
+              <p class="text-center">Coronavirus Digital Agent (Trained Using Neural Network)</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="./gpstracker.html" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">Android GPS Tracker</p></a>
+                <img class="img-fluid img-thumbnail" src="./img/gps/1.jpg" alt="GPS">
+              <p class="text-center">Android GPS Tracker</p></a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="./collegeanalysis.html" class="d-block mb-4 h-100 test">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="testing">
-              <p class="text-center" id="txt">College Applications Regression and Classification Analysis</p></a>
+                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="College Applications">
+              <p class="text-center">College Applications Regression and Classification Analysis</p></a>
         </div>
     </div>
     <!-- /.container -->
