removed college applications project

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <img class="img-fluid img-thumbnail" src="./img/gps/1.jpg" alt="GPS">
               <p class="text-center">Android GPS Tracker</p></a>
         </div>
-        <div class="col-lg-3 col-md-4 col-6 pop">
+        <!-- <div class="col-lg-3 col-md-4 col-6 pop">
           <a href="./collegeanalysis.html" class="d-block mb-4 h-100 test">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="College Applications">
               <p class="text-center">College Applications Regression and Classification Analysis</p></a>
-        </div>
+        </div> -->
     </div>
     <!-- /.container -->
 
