added college apps images and page

--- a/collegeanalysis.html
+++ b/collegeanalysis.html
@@ -25,36 +25,32 @@
       <div class="row text-center text-lg-left">
 
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Login Page</h3>
-          <img class="img-fluid" src="./img/magits/login.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Review Events Data</h3>
+          <img class="img-fluid" src="./img/college apps/1.png" alt="data"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Registration Page</h3>
-          <img class="img-fluid" src="./img/magits/registration.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Review Events Data</h3>
+          <img class="img-fluid" src="./img/college apps/2.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Admin: Course Manager</h3>
-          <img class="img-fluid" src="./img/magits/admin-main.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Correlation Matrix</h3>
+          <img class="img-fluid" src="./img/college apps/correlation matrix.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Admin: Create Course Page</h3>
-          <img class="img-fluid" src="./img/magits/admin-createcourse.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Identifying Events by Feature Importance</h3>
+          <img class="img-fluid" src="./img/college apps/feature importance.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Instructor: Landing Page</h3>
-          <img class="img-fluid" src="./img/magits/instructor-main.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Training Model with Logistic Regression</h3>
+          <img class="img-fluid" src="./img/college apps/logistic regression training.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Instructor: Member Check-in Page (QR Scanner)</h3>
-          <img class="img-fluid" src="./img/magits/instructor-checkin.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Reviewing Predictions</h3>
+          <img class="img-fluid" src="./img/college apps/reviewing prediction results.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Member: Landing Page</h3>
-          <img class="img-fluid" src="./img/magits/member-main.png" alt="testing"><br><br><br>
-        </div>
-        <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Member: View Profile Page</h3>
-          <img class="img-fluid" src="./img/magits/member-viewprofile.png" alt="testing"><br><br><br>
+          <h3 class="font-weight-light text-center text-lg">Additional Graphs</h3>
+          <img class="img-fluid" src="./img/college apps/additional graphs.png" alt="testing"><br><br><br>
         </div>
     </div>
     <!-- /.container -->
