--- a/coronavirusagent.html
+++ b/coronavirusagent.html
@@ -25,7 +25,7 @@
       <div class="row text-center text-lg-left">
 
         <div class="container">
-          <h3 class="font-weight-light text-center text-lg">Updated Numbers on the Left</h3>
+          <h3 class="font-weight-light text-center text-lg">Current World Data is Updated on the Left Side, Taken from an API</h3>
           <img class="img-fluid border border-secondary" src="./img/corona/1.png" alt="testing"><br><br><br>
         </div>
         <div class="container">
